# MCP

./: CLAUDE.md
apple-notes-mcp-server/: pyproject.toml
apple-notes-mcp-server/apple_notes_mcp/: __init__.py  server.py
gcal-mcp-server/: pyproject.toml
gcal-mcp-server/gcal_mcp/: server.py
gdrive-mcp-server/: pyproject.toml
gdrive-mcp-server/gdrive_mcp/: server.py
gmail-mcp-server/: README.md  pyproject.toml
gmail-mcp-server/gmail_mcp/: server.py
